workloads/medium-place/tandoor/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: tandoor
  namespace: medium-place
  labels:
    app.kubernetes.io/name: tandoor
    app.kubernetes.io/part-of: tandoor
    app.kubernetes.io/version: 1.3.2

spec:
  replicas: 1
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app.kubernetes.io/name: tandoor
      app.kubernetes.io/part-of: tandoor

  template:
    metadata:
      annotations:
        diun.enable: "true"
        diun.regopt: docker.io
        diun.watch_repo: "true"
        diun.include_tags: "^\\d+\\.\\d+\\.\\d+$"
      labels:
        app.kubernetes.io/name: tandoor
        app.kubernetes.io/part-of: tandoor
        app.kubernetes.io/version: 1.3.2

    spec:
      containers:
        - name: tandoor
          image: vabene1111/recipes:1.3.2

          volumeMounts:
            - name: data
              mountPath: /opt/recipes/staticfiles
              subPath: /opt/recipes/staticfiles
            - name: data
              mountPath: /opt/recipes/mediafiles
              subPath: /opt/recipes/mediafiles

          ports:
            - name: http
              protocol: TCP
              containerPort: 8080

          resources:
            requests:
              cpu: 16m
              memory: 256Mi
            limits:
              cpu: 64m
              memory: 384Mi

  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: medium-place

      spec:
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
