workloads/medium-place/tandoor/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tandoor
  namespace: medium-place
  labels:
    app.kubernetes.io/name: tandoor
    app.kubernetes.io/part-of: tandoor
    app.kubernetes.io/version: 1.3.3

spec:
  selector:
    app.kubernetes.io/name: tandoor
    app.kubernetes.io/part-of: tandoor

  ports:
    - name: http
      protocol: TCP
      port: 8080 
      targetPort: http
